feat: update launcher icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Reader</string>
+    <string name="app_name">R校园</string>
     <string name="book">书架</string>
     <string name="recommend">推荐</string>
     <string name="stack">书库</string>
